--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,8 +17,9 @@ build:
     - python3-pip
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
-
+  configuration: source/conf.py
+  builder: html
+  fail_on_warning: true
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
 #    - pdf
