--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ build:
     - python3-pip
 # Build documentation in the docs/ directory with Sphinx
 mkdocs:
-  configuration: .mkdocs.yml
+  configuration: mkdocs.yml
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 # formats:
 #    - pdf
