--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 mkdocs==1.3.1
+mkdocs-bootstrap4==0.1.5
+mkdocs-custommill==1.3.0
+mkdocs-git-committers-plugin==0.2.2
+mkdocs-gitbook==0.0.1
+mkdocs-ivory==0.4.6
+mkdocs-material==8.2.11
+mkdocs-material-extensions==1.0.3
+mkdocs-rtd-dropdown==1.0.2
+mkdocs-windmill==1.0.5
