--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-mkdocs==1.3.1
+callouts==0.1.1
+mkdocs-autorefs==0.3.1
 mkdocs-bootstrap4==0.1.5
+mkdocs-callouts==1.7.0
+markdown-callouts==0.3.0
 mkdocs-custommill==1.3.0
 mkdocs-git-committers-plugin==0.2.2
 mkdocs-gitbook==0.0.1
 mkdocs-ivory==0.4.6
-mkdocs-material==8.2.11
+mkdocs-literate-nav==0.5.0
 mkdocs-material-extensions==1.0.3
+mkdocs-material==8.2.11
 mkdocs-rtd-dropdown==1.0.2
 mkdocs-windmill==1.0.5
+mkdocs==1.3.1
+mkdocstrings==0.17.0
+
