--- a/config/vscode_settings.json
+++ b/config/vscode_settings.json
@@ -43,7 +43,7 @@
                 "l"
             ],
             "commands": [
-                ":vsplit",
+                ":vsplit"
             ]
         },
         {
@@ -51,7 +51,7 @@
                 "S"
             ],
             "commands": [
-                ":w",
+                ":w"
             ]
         },
         {
@@ -59,7 +59,7 @@
                 "Q"
             ],
             "commands": [
-                ":q",
+                ":q"
             ]
         }
     ],
@@ -129,5 +129,5 @@
     "vim.sneak": true,
     "vim.sneakReplacesF": true,
     "vim.useSystemClipboard": true,
-    "vim.insertModeKeyBindings": [],
+    "vim.insertModeKeyBindings": []
 }
