--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ theme:
   # name: 'rtd-dropdown'
   # name: 'gitbook'
   # name: 'material'
-  # name: "bootstrap4"
-  name: 'mkdocs'
+  name: "bootstrap4"
+  # name: 'mkdocs'
   # name: 'ivory'
 nav:
   - "WSL": wsl/
