--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,15 @@
 site_name: HOME
 theme:
-  # name: 'windmill'
+  name: 'windmill'
   # name: 'rtd-dropdown'
+  # name: 'custommill'
   # name: 'gitbook'
   # name: 'material'
-  name: "bootstrap4"
+  # name: "bootstrap4"
+  # name: "cerulean"
+  # name: "yeti"
+  # name: "solar"
+  # name: "lumen"
   # name: 'mkdocs'
   # name: 'ivory'
 nav:
