--- a/config/coc-settings.json
+++ b/config/coc-settings.json
@@ -44,6 +44,7 @@
     }
   },
   "clang-format-style-options.priority": 99,
+  "clangd.arguments": [],
   "clang-format-style-options.shortcut": "voldikss",
   "explorer.icon.enableNerdfont": true,
   "explorer.file.showHiddenFiles": true,
@@ -56,5 +57,6 @@
 
   "pyright.enable": true,
   "pyright.completion.snippetSupport": true,
-  "python.pythonPath": "/usr/bin/python3.6"
+  "python.pythonPath": "/usr/bin/python3.6",
+  "python.analysis.extraPaths": ["./"]
 }
