GIt config mergetool bc4

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -20,7 +20,7 @@
 	; https = socks5://172.18.32.1:20170
 	; https = socks5://172.19.208.1:20170
 [merge]
-    tool = p4merge
+	tool = bc4
     ; tool = vimdiff
 	conflictstyle = diff3
 [mergetool]
@@ -33,3 +33,6 @@
 	path = /usr/local/bin/nvim
 [commit]
 	template = /home/lv/works/working-in-wsl/config/git-commit-template.txt
+[mergetool "bc4"]
+	path = /usr/bin/bcompare
+	cmd = bcompare $LOCAL $REMOTE $BASE -mergeoutput=$MERGED
