--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,13 +1,58 @@
-bind r source-file ~/tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# setw -g xterm-keys on
+set -g base-index 1
+
+setw -g pane-base-index 1
+
+set -s escape-time 0
+
+set -s focus-events on
+
+
+set -q -g status-utf8 on
+setw -q -g utf8 on
+
+# mouse
+set -g mouse on
+set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
+# set -g mode-mouse on
+# setw -g mode-mouse on
+
+# set -g mouse-select-window on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
+# set -g mouse-resize-pane on
+
+# 设置默认终端模式为 256color
+
+set -g default-terminal "screen-256color"
+
+set -g visual-activity off
+setw -g monitor-activity off
+setw -g monitor-bell off
+set -g history-limit 10000
+
+bind -n M-v copy-mode
 # Move Between Pane
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind -n M-| split-window -h
-bind -n M-_ split-window -v
+bind -n M-= split-window -h -c "#{pane_current_path}"
+bind -n M-- split-window -v -c "#{pane_current_path}"
 
+# Full scree
+bind -n M-f resize-pane -Z
+
+
+bind -n M-o break-pane
+
+bind -n M-q kill-pane
+
+
+# select windows
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -17,7 +62,54 @@ bind -n M-5 select-window -t 5
 bind -n M-6 select-window -t 6 
 bind -n M-7 select-window -t 7
 
+# window navigation
+unbind n
+unbind p
+unbind 1
+unbind 2
+unbind 3
+unbind 4
+unbind 5
+unbind 6
+unbind 7
+unbind 8
+unbind 9
+unbind 0
+
+bind -n M-Right next-window
+bind -n M-Left previous-window
+
 unbind C-t 
 bind -n C-T new-window
-unbind Escape
+
 unbind -n Escape
+unbind  Escape
+
+unbind Space
+unbind -n Space
+
+unbind C-Space
+unbind -n C-Space
+
+# setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[underscore],}\
+#{?pane_active,❐ #S:#I/#{session_windows} ,}#{?window_zoomed_flag,⬢,❄} #P ⇒ #{pane_tty} #{pane_current_command}'
+
+
+
+set -g status-bg white
+# bind -n M-PageUp copy-mode; send-keys -X page-down
+
+
+# default statusbar colors
+
+
+# set -g status-left ' #[fg=magenta,bold]❐ #S'
+# set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
+# set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
+# set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+# setw -g window-status-format '#[fg=brightblue] #I #W '
+# setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
+# setw -g window-status-activity-style bg=black
+# setw -g window-status-bell-style bg=black
+#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
