--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -45,10 +45,7 @@ bind -n M-- split-window -v -c "#{pane_current_path}"
 
 # Full scree
 bind -n M-f resize-pane -Z
-
-
 bind -n M-o break-pane
-
 bind -n M-q kill-pane
 
 
@@ -91,25 +88,8 @@ unbind -n Space
 unbind C-Space
 unbind -n C-Space
 
-# setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[underscore],}\
-#{?pane_active,❐ #S:#I/#{session_windows} ,}#{?window_zoomed_flag,⬢,❄} #P ⇒ #{pane_tty} #{pane_current_command}'
+
+set -g status-bg yellow
 
 
 
-set -g status-bg white
-# bind -n M-PageUp copy-mode; send-keys -X page-down
-
-
-# default statusbar colors
-
-
-# set -g status-left ' #[fg=magenta,bold]❐ #S'
-# set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
-# set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
-# set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-# setw -g window-status-format '#[fg=brightblue] #I #W '
-# setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
-# setw -g window-status-activity-style bg=black
-# setw -g window-status-bell-style bg=black
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
