--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -25,14 +25,14 @@ set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
 # set -g mouse-resize-pane on
 
 # 设置默认终端模式为 256color
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
-set -g visual-activity off
-setw -g monitor-activity off
-setw -g monitor-bell off
-set -g history-limit 10000
+set -g visual-activity on
+set -g monitor-activity on
+# setw -g monitor-bell off
+# set -g history-limit 10000
 
-bind -n M-v copy-mode
+
 # Move Between Pane
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
@@ -40,7 +40,9 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 bind -n M-= split-window -h -c "#{pane_current_path}"
+bind -n M-Enter split-window -h -c "#{pane_current_path}"
 bind -n M-- split-window -v -c "#{pane_current_path}"
+bind -n M-BSpace split-window -v -c "#{pane_current_path}"
 
 # Full scree
 bind -n M-f resize-pane -Z
@@ -74,6 +76,8 @@ unbind 0
 
 bind -n M-Right next-window
 bind -n M-Left previous-window
+bind -n M-L next-window
+bind -n M-H previous-window
 
 unbind C-t 
 bind -n C-T new-window
@@ -87,3 +91,26 @@ unbind -n Space
 unbind C-Space
 unbind -n C-Space
 set -g status-bg yellow
+
+
+
+bind -n M-v copy-mode
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi h send-keys -X cursor-left
+bind -T copy-mode-vi l send-keys -X cursor-right
+bind -T copy-mode-vi k send-keys -X cursor-up
+bind -T copy-mode-vi j send-keys -X cursor-down
+# bind -T copy-mode-vi h send-keys -X next-word-end
+bind -T copy-mode-vi K send-keys -N 5 -X cursor-up
+bind -T copy-mode-vi J send-keys -N 5 -X cursor-down
+bind -T copy-mode-vi K send-keys -N 5 -X cursor-up
+bind -T copy-mode-vi J send-keys -N 5 -X cursor-down
+# bind -T copy-mode-vi N send-keys -X start-of-line
+# bind -T copy-mode-vi I send-keys -X end-of-line
+# bind -T copy-mode-vi Y send-keys -X copy-end-of-line
+# bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+# bind -T copy-mode-vi = send-keys -X search-again
+# bind -T copy-mode-vi = send-keys -X search-reverse
+
+
