--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -25,7 +25,7 @@ set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
 # set -g mouse-resize-pane on
 
 # 设置默认终端模式为 256color
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 set -g visual-activity on
 set -g monitor-activity on
